syntax = "proto3";

option csharp_namespace = "DADProject";

service ProjectBankServerService {
	rpc ReadBalance(ReadBalanceRequest) returns (ReadBalanceReply);
	rpc Deposit(DepositRequest) returns (DepositReply);
	rpc Withdraw(WithdrawRequest) returns (WithdrawReply);
	rpc AcceptCompareSwapResult (CompareSwapResult) returns (CompareSwapReply);
}


message ReadBalanceRequest {
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
}
message ReadBalanceReply {
	int32 ack = 1;
	double balance = 2;
}

message DepositRequest {
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
	double amount = 4;
}
message DepositReply {
	int32 ack = 1;
	bool status = 2;
}

message WithdrawRequest {
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
	double amount = 4;
}
message WithdrawReply {
	int32 ack = 1;
	int32 status = 2;
}

message CompareSwapResult {
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
	int32 slot = 4;
	int32 value = 5; 
}
message CompareSwapReply {
	int32 ack = 1;
}