syntax = "proto3";

option csharp_namespace = "DADProject";

service ProjectBankTwoPCService {
	rpc ListPendingRequests(ListPendingRequestsRequest) returns (ListPendingRequestsReply);
	rpc TwoPCTentative(TwoPCTentativeRequest) returns (TwoPCTentativeReply);
	rpc TwoPCCommit(TwoPCCommitRequest) returns (TwoPCCommitReply);
}

message ListPendingRequestsRequest{
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
	int32 globalSeqNumber = 4;
}
message ListPendingRequestsReply{
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
	repeated ClientCommandGRPC commands = 5;
}

message TwoPCTentativeRequest {
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
	ClientCommandGRPC command = 4;
}
message TwoPCTentativeReply {
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
	bool status = 4;
}

message TwoPCCommitRequest {
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
	ClientCommandGRPC command = 4;
}
message TwoPCCommitReply {
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
	bool status = 4;
}

message ClientCommandGRPC {
	int32 slot = 1;
	int32 clientId = 2;
	int32 clientSeqNumber = 3;
	string type = 4;
	double amount = 5;
	int32 globalSeqNumber = 6; 
}