syntax = "proto3";

option csharp_namespace = "DADProject";

service ProjectBoneyAcceptorService {
	rpc Prepare(PrepareRequest) returns (PromiseReply);	
	rpc Accept(AcceptRequest) returns (AcceptReply);
}

message PrepareRequest {
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
	int32 slot = 4;
	int32 timestampId = 5;
}

message PromiseReply {
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
	bool status = 4;
	int32 value = 5;
	int32 writeTimestamp = 6;
}

message AcceptRequest {
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
	int32 slot = 4;
	int32 timestampId = 5;
	int32 value = 6;
}

message AcceptReply {
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
	bool status = 4;
}